welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {poseBrosse();
if(getCouleurSol() == Color.green){avance()}else{droite();avance()}

}        
